[tool.poetry]
name = "recommendation"
version = "0.1.0"
description = ""
authors = ["makkawy16 <yousef.elmakkawy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
